# agentc

./: .gitignore  AgentLang.md  CMakeLists.txt  README.md  agentc-config.json  agentc.sh  demo_live_llm.sh  demo_local_llm.sh  demo_runner.sh  edict.sh  makefile  markethub-service.txt  test_raw.sh
cartographer/: CMakeLists.txt  boxing.cpp  boxing.h  boxing_export.cpp  boxing_ffi.h  cartographer_dump.cpp  cartographer_parse.cpp  cartographer_resolve.cpp  cartographer_resolve_inspect.cpp  cartographer_schema_inspect.cpp  ffi.cpp  ffi.h  ltv_api.cpp  ltv_api.h  mapper.cpp  mapper.h  parser.cpp  parser.h  protocol.cpp  protocol.h  resolver.cpp  resolver.h  service.cpp  service.h  tool_cli.cpp  tool_cli.h  visualizer.cpp
cartographer/libboxing/: boxing_ffi.c  boxing_ffi.h
cartographer/tests/: abs_test.h  ffi_tests.cpp  kanren_runtime_ffi_poc.h  libagentmath_poc.c  libagentmath_poc.h  libagentthreads_poc.cpp  libagentthreads_poc.h  ltv_api_tests.cpp  mapper_tests.cpp  poc_test.cpp  service_tests.cpp  test_input.h  tool_tests.cpp
cpp-agent/: CMakeLists.txt  agent_loop.cpp  agent_loop.h  agent_types.h  ai_types.h  api_registry.cpp  api_registry.h  credentials.cpp  credentials.h  edict_tools.cpp  edict_tools.h  hello_gemini.cpp  http_client.cpp  http_client.h  main.cpp  socket_server.cpp  socket_server.h  sse_parser.cpp  sse_parser.h
cpp-agent/config/: runtime.default.json
cpp-agent/demo/: demo_agentc_runtime_edict.sh  demo_gemini.sh  demo_inverted_agent_root.sh  demo_inverted_hello_loop.sh  demo_inverted_stateful_loop.sh  demo_runtime_persistence.sh
cpp-agent/edict/modules/: agentc.edict  agentc_agent_root.edict  agentc_curated.edict  agentc_hello_loop.edict  agentc_provider_contracts.edict  agentc_stateful_loop.edict  cognitive.edict  intern.edict  llm.edict  overlay.edict  root1.edict  worker.edict
cpp-agent/providers/: google.cpp  google.h  openai.cpp  openai.h
cpp-agent/tests/: agent_loop_test.cpp  agent_root_state_test.cpp  agent_root_vm_ops_test.cpp  edict_agent_root_test.cpp  edict_agentc_module_test.cpp  edict_hello_loop_test.cpp  edict_llm_module_test.cpp  edict_stateful_loop_test.cpp  embedded_vm_root_restore_test.cpp  multi_provider_test.cpp  provider_integration_demo.cpp  provider_registration_test.cpp  run_cpp_agent_tests_with_timeout.sh  runtime_abi_test.cpp  session_state_store_test.cpp  stream_manager_test.cpp
demo/: CMakeLists.txt  demo_arena_metadata_persistence.cpp  demo_boxing.sh  demo_capabilities.cpp  demo_cognitive_core.sh  demo_cognitive_core_socket.sh  demo_cognitive_core_validation.cpp  demo_complex.h  demo_composite_speculation_logic_ffi.cpp  demo_ffi_libc.cpp  demo_ffi_libc.sh  demo_import_cache.sh  demo_kanren_edict.cpp  demo_kanren_reasoning.cpp  demo_math.h  demo_overlay_dictionary.cpp  demo_rewrite_language.cpp  demo_rewrite_runtime.cpp  demo_sdl3_native_poc.h  demo_sdl_triangle.ed  demo_sdl_triangle.sh  demo_sdl_triangle_bridge.cpp  demo_sdl_triangle_bridge.h  demo_sdl_triangle_native.sh  demo_speculation.cpp  test_boxing_ffi.sh  test_cartographer_dump.sh  test_cartographer_resolve_inspect.sh  test_cartographer_schema_inspect.sh  test_import_cache.ed  test_unicode.ed  test_unicode_id.ed
doc/: j2.md  (+1 more)
edict/: CMakeLists.txt  CTestTestfile.cmake  agentc_root1_primitives.h  agentc_tcc_api.h  agentc_worker_primitives.h  block_accumulator.cpp  block_accumulator.h  cmake_install.cmake  edict  edict_compiler.cpp  edict_compiler.h  edict_intern_service.h  edict_repl.cpp  edict_repl.h  edict_root1_primitives.cpp  edict_tests  edict_types.cpp  edict_types.h  edict_vm.cpp  edict_vm.h  edict_vm_bootstrap.cpp  edict_vm_core.cpp  edict_vm_ffi.cpp  edict_vm_intern.cpp  edict_vm_knowledge_graph.cpp  edict_vm_overlay.cpp  edict_vm_tcc.cpp  edict_vm_treesitter.cpp  edict_worker_primitives.cpp  edict_worker_primitives_ffi.cpp  edict_worker_runtime.cpp  edict_worker_runtime.h  main.cpp  pipe_io.h  root1_await_scheduler.cpp  root1_await_scheduler.h  static_declaration_image.cpp  static_declaration_image.h  static_slot_table_image.cpp  static_slot_table_image.h  (+7 more)
edict/tests/: call_isolation_test.cpp  callback_test.cpp  cognitive_scaffold_test.cpp  cognitive_validation_test.cpp  edict_tests.cpp  intern_worker_test.cpp  logic_surface_test.cpp  overlay_dictionary_test.cpp  pi_simulation_test.cpp  regression_matrix.cpp  repro_hang.cpp  rewrite_language_test.cpp  rewrite_runtime_test.cpp  root1_await_scheduler_test.cpp  root1_primitive_module_test.cpp  session_cli_test.cpp  simple_assign_test.cpp  splice_test.cpp  static_declaration_image_test.cpp  static_slot_table_image_test.cpp  tcc_runtime_test.cpp  tcc_test_adapter.cpp  transaction_test.cpp  treesitter_edict_test.cpp  vm_execution_test.cpp  vm_stack_tests.cpp
kanren/: CMakeLists.txt  kanren.cpp  kanren.h  logic_evaluator.cpp  logic_evaluator.h  runtime_ffi.cpp  runtime_ffi.h
kanren/tests/: kanren_tests.cpp
listree/: CMakeLists.txt  container_hardening_test.cpp  cursor_tail_test.cpp  cursor_traversal_test.cpp  cycle_test.cpp  debug_helpers.h  deep_copy_test.cpp  hardening_test  listree.cpp  listree.h  listree_mmap_test.cpp  listree_tests.cpp  repro_remove  traversal_visit_test.cpp  traverse_test.cpp
markethub/: CMakeLists.txt  README.md  check_backend_compat.sh  live_backend_smoke.sh  markethub-backend.service
markethub/facade/: greekscope_facade.cpp  greekscope_facade.h
markethub/src/: brokerage_provider.cpp  market_event.cpp  market_hub.cpp
markethub/tests/: brokerage_provider_test.cpp  facade_bridge_test.cpp  market_hub_test.cpp
markethub/tools/: markethub_compat_backend.cpp  markethub_live_smoke.cpp
tests/: CMakeLists.txt  alloc_tests.cpp  cll_segfault_test.cpp  container_tests.cpp  cursor_test.edict  cursor_tests.cpp  main_test.cpp  root1_resource_broker_tests.cpp  string_architecture_tests.cpp  test_main.cpp
treesitter/: CMakeLists.txt  knowledge_graph.cpp  knowledge_graph.h  structural_diff.cpp  structural_diff.h  tree_sitter_bridge.cpp  tree_sitter_bridge.h
treesitter/edict/: grammar.js  tree_sitter_edict.h
treesitter/examples/: demo.edict
treesitter/tests/: treesitter_test.cpp
(+922 files in other folders)
